refactor: Device 및 Asset 카테고리 응답 구조 개선 및 Facility/Asset 코드 필드 추가 DeviceCategoryTreeResponse와 AssetCategoryResponse의 응답에 아이콘 파일 정보를 포함하도록 구조를 개선하고 관련 서비스 로직을 수정했습니다. 또한, Facility 및 Asset 도메인에 code 필드를 추가하고, 관련 DTO 및 테스트 코드에 이를 반영했습니다. 주요 변경 사항: Device 카테고리: DeviceCategoryTreeResponse DTO: iconFileId 필드를 FileResponse iconFile 필드로 변경하여 아이콘 파일 전체 정보를 포함하도록 수정했습니다. DeviceCategoryService: getDeviceCategoryTree 및 관련 private 메소드에서 FileService를 통해 FileResponse를 조회하여 DeviceCategoryTreeResponse를 생성하도록 로직을 변경했습니다. NfluxCategory 엔티티를 DeviceCategory를 상속받도록 추가했습니다. (contextPath 필드 포함, 최대 깊이 1) Asset 카테고리: AssetCategoryResponse DTO: iconFileId 필드를 FileResponse iconFile 필드로 변경하고, 서비스 레이어에서 FileService를 통해 아이콘 파일 정보를 설정하도록 from 메소드들을 수정했습니다. AssetCategoryService: getAssetCategory, getAssetCategories, getRootCategories, getChildCategories 메소드에서 FileService를 호출하여 AssetCategoryResponse에 아이콘 파일 정보를 채우도록 로직을 수정했습니다. Facility 도메인: Facility 엔티티 및 관련 DTO (FacilityCreateRequest, FacilityUpdateRequest, FacilityResponse, FacilityHistoryResponse)에 code 필드를 추가했습니다. FacilityService: code 필드 관련 로직(중복 검사, 생성 및 수정 시 반영)을 추가하고, 기존 테스트(PanoramaServiceTest, BuildingServiceTest)의 데이터 준비 부분에 code 필드를 반영했습니다. FacilityRepository에 existsByCode 및 findByCode 메소드를 추가했습니다. Asset 도메인: Asset 엔티티 및 관련 DTO (AssetCreateRequest, AssetUpdateRequest, AssetResponse)에 code 필드를 추가했습니다. AssetService: code 필드 관련 로직을 반영하고, 기존 테스트(AssetServiceTest)의 데이터 준비 및 검증 부분에 code 필드를 반영했습니다. AssetIntegrationTest에 code 필드 관련 테스트 케이스를 보강하고, 카테고리 제거 테스트의 검증 로직을 수정했습니다. (updateCategoryToNull 테스트는 주석 처리된 것으로 보임) 기타: AdminUserController의 getLoggedInUser 메소드 API 경로를 /logged-in에서 /with-is-logged-in으로 변경했습니다. StationServiceTest의 findByCode_WithExistingCode_ReturnsStationResponse 테스트에서 EntityManager (em.flush(), em.clear())를 사용하여 영속성 컨텍스트를 관리하고, 일부 검증 로직을 주석 처리했습니다. 테스트 리소스에 temp2.png 파일이 추가되었습니다.